--- a/app/home.css
+++ b/app/home.css
@@ -27,3 +27,9 @@
    flex-direction: column;
    align-items: center;
 }
+
+.posts {
+   display: grid;
+   grid-template-columns: 1fr 1fr 1fr;
+
+}
