--- a/app/components/Header/header.css
+++ b/app/components/Header/header.css
@@ -1,5 +1,5 @@
 header {
-   max-width: 1198px;
+   max-width: 1238px;
    width: 100%;
    height: 70px;
    display: flex;
@@ -7,7 +7,7 @@ header {
 }
 
 .header_container {
-   max-width: 1198px;
+   max-width: 1238px;
    height: 174px;
    display: flex;
    flex: 1 1 100%;
@@ -115,6 +115,7 @@ header {
    }
 
    .nav_mobile-menu.active {
+      background-color: white;
       width: 100%;
       display: flex;
       flex-direction: column;
