--- a/app/home.css
+++ b/app/home.css
@@ -1,3 +1,7 @@
+.main {
+   margin: 0 10px 0 10px;
+}
+
 .page-title_section {
    display: flex;
    flex-direction: column;
@@ -26,10 +30,23 @@
    display: flex;
    flex-direction: column;
    align-items: center;
+   justify-content: center;
 }
 
 .posts {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
+   gap: 20px;
+}
 
+@media (max-width: 1238px) {
+   .posts {
+      grid-template-columns: 1fr 1fr;
+   }
+}
+
+@media (max-width: 826px) {
+   .posts {
+      grid-template-columns: 1fr;
+   }
 }
