дороблено все що звязано з компонентом Post(додано пару пунктів в postdata, остаточно оформлено в post.css)

--- a/app/home.css
+++ b/app/home.css
@@ -1,5 +1,8 @@
 .main {
    margin: 0 10px 0 10px;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
 }
 
 .page-title_section {
