--- a/app/components/Post/post.css
+++ b/app/components/Post/post.css
@@ -11,7 +11,6 @@
 .post_cover {
    width: 360px;
    height: 240px;
-   background-color: gray;
    margin: 16px;
 }
 
@@ -73,8 +72,17 @@
       height: 400px;
    }
 
-   .post_cover {
-      width: 270px;
+   .post_cover > img {
+      max-width: 270px;
+      max-height: 150px;
+   }
+
+   .post_title {
+      margin-bottom: 8px;
+   }
+
+   .post_title > p {
+      font-size: 1.2rem;
    }
 
    .post_author {
