--- a/app/home.css
+++ b/app/home.css
@@ -40,6 +40,27 @@
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 20px;
+   margin-bottom: 32px;
+}
+
+/* .post-card_section {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   width: 1214px;
+   height: 450px;
+} */
+
+.load-more_button {
+   border: 1px solid #696A754D;
+   border-radius: 6px;
+   width: 123px;
+   height: 48px;
+   background-color: white;
+   font-size: 1rem;
+   font-weight: 500;
+   color: #696A75;
+   margin-bottom: 80px;
 }
 
 @media (max-width: 1238px) {
