--- a/app/components/Footer/footer.css
+++ b/app/components/Footer/footer.css
@@ -1,6 +1,6 @@
 .footer {
    width: 100%;
-   height: 500px;
+   height: 510px;
    display: flex;
    justify-content: center;
    margin-top: 80px;
@@ -164,6 +164,7 @@
    display: flex;
    flex-direction: row;
    align-items: center;
+   margin: 0 10px;
 }
 
 .copyright-logo_text {
@@ -199,5 +200,19 @@
 @media (max-width: 690px) {
    .about {
       align-items: center;
+   }
+
+   .about_paragraph > p {
+      text-align: center;
+   }
+}
+
+@media (max-width: 380px) {
+   .copyright_links {
+      gap: 12px;
+   }
+
+   .copyright_links > p {
+      font-size: 0.75rem;
    }
 }
