--- a/app/singlepost/singlepost.css
+++ b/app/singlepost/singlepost.css
@@ -74,3 +74,22 @@
    font-size: 0.875rem;
    color: #696A75;
 }
+
+/* .paragraphs_section {
+   width: 100%;
+   margin: 32px 0px 32px 0px;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+} */
+
+.blog-info_image {
+   margin: 0 10px;
+}
+
+.blog-info_image {
+   max-width: 800px;
+   width: 100%;
+   position: relative;
+   height: 462px;
+}
