--- a/app/components/Header/header.css
+++ b/app/components/Header/header.css
@@ -1,13 +1,14 @@
 header {
-   max-width: 1238px;
+   max-width: 1218px;
    width: 100%;
    height: 70px;
    display: flex;
-   padding: 0 10px;
+   margin-left: 10px;
+   margin-right: 10px;
 }
 
 .header_container {
-   max-width: 1238px;
+   max-width: 1218px;
    width: 100%;
    height: 174px;
    display: flex;
