--- a/app/singlepost/singlepost.css
+++ b/app/singlepost/singlepost.css
@@ -84,12 +84,23 @@
 } */
 
 .blog-info_image {
-   margin: 0 10px;
-}
-
-.blog-info_image {
+   margin: 32px 10px;
    max-width: 800px;
    width: 100%;
    position: relative;
-   height: 462px;
+   height: 468px;
+   object-fit: cover;
+   object-position: bottom;
 }
+
+@media (max-width: 480px) {
+   .blog-info_image {
+      height: 290px;
+   }
+}
+
+@media (max-width: 370px) {
+   .blog-info_image {
+      height: 200px;
+   }
+} 
