--- a/app/singlepost/singlepost.css
+++ b/app/singlepost/singlepost.css
@@ -75,14 +75,6 @@
    color: #696A75;
 }
 
-/* .paragraphs_section {
-   width: 100%;
-   margin: 32px 0px 32px 0px;
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-} */
-
 .blog-info_image {
    margin: 32px 10px;
    max-width: 800px;
@@ -92,6 +84,21 @@
    object-fit: cover;
    object-position: bottom;
 }
+
+/* .paragraphs_section {
+   width: 100%;
+   display: flex;
+   flex-direction: column;
+   align-items: start;
+}
+
+.paragraphs_section > p {
+   color: black;
+   font-size: 1.25rem;
+   line-height: 2rem;
+   margin: 0 10px;
+   margin-bottom: 40px;
+} */
 
 @media (max-width: 480px) {
    .blog-info_image {
