--- a/app/components/Footer/footer.css
+++ b/app/components/Footer/footer.css
@@ -1,6 +1,7 @@
 .footer {
    width: 100%;
    height: 510px;
+   height: 100%;
    display: flex;
    justify-content: center;
    margin-top: 80px;
@@ -10,6 +11,7 @@
 
 .footer_container {
    max-width: 1238px;
+   height: 510px;
    width: 100%;
    margin: 0 10px;
    display: flex;
@@ -165,6 +167,7 @@
    flex-direction: row;
    align-items: center;
    margin: 0 10px;
+   height: 52px;
 }
 
 .copyright-logo_text {
@@ -172,6 +175,7 @@
    flex-direction: column;
    gap: 7px;
    margin-left: 10px;
+   height: 52px;
 }
 
 .copyright_links {
