--- a/app/components/Header/header.css
+++ b/app/components/Header/header.css
@@ -3,8 +3,6 @@ header {
    width: 100%;
    height: 70px;
    display: flex;
-   margin-left: 10px;
-   margin-right: 10px;
 }
 
 .header_container {
@@ -22,6 +20,8 @@ header {
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
+   margin-left: 10px;
+   margin-right: 10px;
 }
 
 .nav_logo {
@@ -124,7 +124,7 @@ header {
       align-items: center;
       position: absolute;
       top: 70px;
-      left: 2px;
+      left: 0px;
       padding-bottom: 25px;
       z-index: 9;
    }
@@ -136,6 +136,7 @@ header {
       gap: 20px;
       list-style-type: none;
       padding: 0;
+      margin-bottom: 20px;
    }
 
    .nav_buttons-mobile > li > a {
