--- a/app/components/Footer/footer.css
+++ b/app/components/Footer/footer.css
@@ -242,3 +242,30 @@
       font-size: 0.75rem;
    }
 }
+
+@media (max-width: 380px) {
+   .footer_copyright {
+      flex-direction: column;
+      gap: 60px;
+      align-items: center;
+      padding: 0;
+   }
+   
+   .copyright_logo {
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 25px;
+   }
+
+   .copyright_logo > img {
+      margin-left: 10px;
+   }
+   
+   .copyright-logo_text {
+      align-items: center;
+   }
+   
+   .copyright-logo_text p {
+      text-align: center;
+   }
+}
